@@ -11,7 +11,7 @@
 <p>You are about to use your {{account.get_provider.name}} account to login to 
 {{site.name}}. As a final step, please complete the following form:</p>
     
-<form class="signup uniForm" id="signup_form" method="post" action="{% url socialaccount_signup %}">
+<form class="signup uniForm" id="signup_form" method="post" action="">
   {% csrf_token %}
   <fieldset class="inlineLabels">
     {{ form|as_uni_form }}
